<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BeaconMessaging</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Home</string>

    <string name="login">Log in</string>
    <string name="signup">Sign up</string>
    <string name="powered_by">Powered by</string>
    <string name="parse">Parse</string>
    <string name="slogan">Connect</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_exhibit">Exhibits</string>
    <string name="title_activity_profile">User Profile</string>
    <string name="title_activity_posts">Posts</string>
    <string name="title_activity_exhibit_add">Add Exhibit</string>
    <string name="exhibit_title">Exhibit title</string>
    <string name="exhibit_description">Description</string>
    <string name="enter_title">Exhibition title</string>
    <string name="enter_description">Exhibit Description</string>
    <string name="txt_favorite_count">likes  </string>
    <string name="txt_post_count">posts  </string>
    <string name="action_profile">Profile</string>
    <string name="get_your_photo_here">Get Your Photo Here</string>
    <string name="action_logout">log out</string>
    <string name="defaultFavoriteCount">0</string>
    <string name="defaultPostCount">0</string>
    <string name="hint_enter_post">Ok, what do you think of this Exhibit?</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_post">Add Comment</string>
</resources>
