<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.yahoo.beaconmessaging.activity.ExhibitAddActivity">

    <TextView android:text="@string/exhibit_title"
        android:layout_width="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:id="@+id/tvTitle"
        android:layout_alignParentLeft="true"
        android:paddingLeft="5dp"
        android:layout_marginTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="11dp"
        android:layout_height="wrap_content" />

    <!--android:layout_alignBottom="@+id/tvTitle"-->

    <EditText android:hint="@string/enter_title"
        android:layout_width="wrap_content"
        android:layout_toRightOf="@+id/tvTitle"
        android:layout_alignBottom="@+id/tvTitle"
        android:id="@+id/edTitle"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_height="wrap_content" />

    <TextView android:text="@string/exhibit_description"
        android:layout_width="wrap_content"
        android:id="@+id/tvDescription"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edTitle"
        android:paddingLeft="5dp"
        android:layout_marginTop="10dp"
        android:paddingBottom="11dp"
        android:paddingRight="10dp"
        android:layout_height="wrap_content" />

    <!--android:layout_alignBottom="@+id/tvDescription"-->

    <EditText android:hint="@string/enter_description"
        android:id="@+id/edDescription"
        android:layout_toRightOf="@+id/tvDescription"
        android:layout_below="@+id/edTitle"
        android:layout_alignBottom="@+id/tvDescription"
        android:minLines="10"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Featured"
        android:id="@+id/featured"
        android:layout_below="@+id/tvDescription"
        android:layout_centerHorizontal="true"
        />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Photo"
        android:id="@+id/btnImageAdd"
        android:onClick="onImageAdd"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/edDescription"
        android:background="@drawable/shape_fancy_button"
        android:layout_marginTop="35dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add Exhibit"
        android:id="@+id/btnAdd"
        android:onClick="onAdd"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edDescription"
        android:background="@drawable/shape_fancy_button"
        android:layout_marginTop="35dp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ivPicture"
        android:layout_below="@+id/btnImageAdd"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
