
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
android:layout_height="wrap_content"
tools:context="com.yahoo.beaconmessaging.fragment.AddPostFragment"
    android:background="#fffffbff">

<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:id="@+id/ivCurrentUserProfile"
    android:layout_alignParentTop="true"
    android:layout_alignParentLeft="true"
    android:layout_margin="10dp"
    android:adjustViewBounds="true"
    android:elevation="@dimen/abc_action_bar_default_height_material"
    android:backgroundTint="@color/abc_primary_text_material_light"
    android:src="@drawable/ic_launcher"
    android:background="#fffffbff"
    android:scaleType="fitXY"/>

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_toRightOf="@+id/ivCurrentUserProfile"
    style="@style/Base.TextAppearance.AppCompat.Headline"
    android:id="@+id/tvUser"
    android:paddingTop="16dp" />

<EditText
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/etPost"
    android:maxLines="4"
    android:inputType="textMultiLine"
    style="@style/Base.TextAppearance.AppCompat.Body1"
    android:hint="@string/hint_enter_post"
    android:layout_below="@+id/ivCurrentUserProfile"
    android:layout_centerHorizontal="true"
    android:lines="4"
    android:linksClickable="false"
    android:gravity="top|left"
    android:singleLine="false"
    android:layout_marginLeft="20dp" />

<LinearLayout
    android:orientation="horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/etPost"
    android:layout_centerHorizontal="true"
    >

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:id="@+id/btnCancel"
        android:textAllCaps="false"
        android:background="@drawable/shape_fancy_button"
        android:layout_below="@+id/etPost"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="#fffffbff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_post"
        android:id="@+id/btnPost"
        android:textAllCaps="false"
        android:background="@drawable/shape_fancy_button"
        android:layout_marginBottom="5dp"

        android:layout_marginRight="5dp"
        android:layout_below="@+id/etPost"
        android:textColor="#ffffffff" />

</LinearLayout>
    
    
    
    

</RelativeLayout>
