<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Theme.Holo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    
    tools:context=".WelcomeActivity" >

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/city_faded"
        android:scaleType="fitXY"
         />


    <TextView
        android:id="@+id/tvSlogan"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:textColor="@android:color/white"
        android:text="@string/slogan"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        >
        <Button
            android:id="@+id/login_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape_fancy_button"
            android:text="@string/login"
            android:textColor="#fffffbff" />

        <Button
            android:id="@+id/signup_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_fancy_button"
            android:layout_below="@id/login_button"
            android:text="@string/signup"
            android:textColor="#fffffbff" />


    </LinearLayout>
    
    <!--<TextView-->
        <!--android:id="@+id/textview_1"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginBottom="52dp"-->
        <!--android:text="@string/powered_by"-->
        <!--android:textAppearance="?android:attr/textAppearanceSmall" />-->

    <!--<TextView-->
        <!--android:id="@+id/textview_2"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignTop="@+id/textview_1"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="19dp"-->
        <!--android:text="@string/parse"-->
        <!--android:textAppearance="?android:attr/textAppearanceMedium" />-->


</RelativeLayout>